# OOPSZI

L1/: CMakeLists.txt
L1/src/: func.h  task1.c  task2.c  task3.c  task4.c  task5_func.c  task5_main.c  task6_func.c  task6_main.c  task7_func.c  task7_main.c
L2/: CMakeLists.txt
L2/src/: task1.c  task2.c  task33.c
L3/: CMakeLists.txt
L3/src/: Header.h  task1dw.c  task1f.c  task1w.c  task2dw.c  task2f.c  task2w.c  task3dw.c  task3f.c  task3w.c  task4dw.c  task4f.c  task4w.c  task5dw.c  task5f.c  task5w.c  task6dw.c  task6f.c  task6w.c
L4/: CMakeLists.txt
L4/src/: main.cpp  rational.cpp  rational.h
