cmake_minimum_required (VERSION 3.8)

add_executable(task1 src/Header.h src/task1f.c src/task2f.c src/task3f.c src/task4f.c src/task5f.c src/task6f.c )
add_executable(task2 src/Header.h src/task1w.c src/task2w.c src/task3w.c src/task4w.c src/task5w.c src/task6w.c)
add_executable(task3 src/Header.h src/task1dw.c src/task2dw.c src/task3dw.c src/task4dw.c src/task5dw.c src/task6dw.c)